# count-words

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  ranges.rs
tests/: api.rs  conformance.rs  edge_cases.rs  properties.rs
tests/fixtures/: cases.json
