[package]
name = "count-words"
version = "0.2.0"
edition = "2021"
description = "count words in mixed CJK, Latin, and multilingual text"
keywords = ["words", "count", "cjk", "text", "unicode"]
categories = ["text-processing", "internationalization"]
license = "MIT"
repository = "https://github.com/hey-jj/count-words"
readme = "README.md"

[dependencies]

[dev-dependencies]
# Load the golden corpus (tests/fixtures/cases.json) into typed structs.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
